--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <type>pom</type>
         </dependency>
         <dependency>
+            <groupId>th.co.geniustree.intenship</groupId>
+            <artifactId>advisor</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
