--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-jpamodelgen</artifactId>
-            <version>4.3.10.Final</version>
+            <version>5.0.0.CR1</version>
         </dependency>
     </dependencies>
 
