--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,8 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-jpamodelgen</artifactId>
-            <version>5.0.0.CR1</version>
+            <version>4.3.10.Final</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
