--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.thymeleaf.cache: false
 spring.jpa.properties.javax.persistence.validation.mode=none 
 
 #logging
-logging.level.org.springframework.web: INFO
-logging.level.org.springframework.security: INFO
+logging.level.org.springframework.web: DEBUG
+logging.level.org.springframework.security: DEBUG
 logging.level.org.hibernate: INFO
 logging.level.com.cpone.platform: DEBUG
 
